--- a/k8s-template.yaml
+++ b/k8s-template.yaml
@@ -18,21 +18,20 @@ spec:
       containers:
       - name: "{containerName}"
         image: {containterTag}
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
-        envFrom:
-        - configMapRef:
-             name: common-env
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: "{containerName}"
+  namespace: "uni-resolver"
 spec:
   type: NodePort
   selector:
     app: "{containerName}"
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 8080
