--- a/k8s-template.yaml
+++ b/k8s-template.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "{containerName}"
+  name: "{{containerName}}"
   namespace: "uni-resolver"
   labels:
-    app: "{containerName}"
+    app: "{{containerName}}"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "{containerName}"
+      app: "{{containerName}}"
   template:
     metadata:
       labels:
-        app: "{containerName}"
+        app: "{{containerName}}"
     spec:
       containers:
-      - name: "{containerName}"
-        image: {containterTag}
+      - name: "{{containerName}}"
+        image: {{containterTag}}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -25,13 +25,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{containerName}"
+  name: "{{containerName}}"
   namespace: "uni-resolver"
 spec:
   type: NodePort
   selector:
-    app: "{containerName}"
+    app: "{{containerName}}"
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
